tests/integration/build/errors/catch.c
/* Code generated using the Orng compiler https://ornglang.org */
#include <math.h>
#include <stdio.h>
#include <stdint.h>
#include <stdlib.h>

#include "debug.inc"

/* Function forward definitions */
int64_t _457_main(void);

/* Function definitions */
int64_t _457_main(void) {
    int64_t _457_$retval;
    _457_$retval = 118;
    return _457_$retval;
}

int main(void) {
  printf("%ld",_457_main());
  return 0;
}
